--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Init submodules
+        run: git submodule update --init --recursive
+
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
