--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
   pull_request:
     paths-ignore:
-    - "docs/**"
-    - "README.md"
+      - "docs/**"
+      - "README.md"
   push:
     branches:
       - master
@@ -21,14 +21,4 @@ jobs:
   run-ci:
     uses: ./.github/workflows/flutter-build.yml
     with:
-      upload-artifact: false
-      
-  upload-windows-exe:
-    needs: run-ci
-    runs-on: windows-2022
-    if: success()
-    steps:
-      - uses: actions/upload-artifact@v4
-        with:
-          name: rustdesk-windows-exe
-          path: flutter/build/windows/x64/runner/Release/*.exe
+      upload-artifact: true
